Mockito agent setup now done by new utility class.